<resources>
    <string name="app_name">Auction_app</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">SIGN IN</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="buyer_first_name">First Name</string>
    <string name="buyer_last_name">Last Name</string>
    <string name="buyer_email">Email</string>
    <string name="buyer_password">Enter Password</string>

    <string name="buyer_confirm_password">Confirm Password</string>
    <string name="buyer_address">Enter Address</string>
    <string name="buyer_pincode">Enter pincode</string>
    <string name="buyer_confirm_pass">Confirm Password</string>
    <string name="buyer_phone">Enter Phone number</string>
    <string name="Sign_up_btn_txt">Sign Up</string>
    <string name="txt_submit">SUBMIT</string>

    <string-array name="values_provinces">

        <item>
            British Columbia
        </item>

        <item>
            Ontario

        </item>
    </string-array>
    <string name="title_activity_register_bid_creator">activity_register_bid_creator</string>
    <string name="content_img">dcio dhuivy ydviuyvfi</string>
    <string name="img_desc">signup_icon</string>
    <string name="Signup_header_txt_bidder">Sign Up To Start Bidding</string>
    <string name="txt_personal_info">Personal Info</string>
    <string name="header_bussiness_info">Banking Information</string>
    <string name="hint_txt_payee_name">Payee Name</string>
    <string name="hint_txt_Bank_Name">Bank Name</string>
    <string name="txt_desc_payee_name">The name our app will use to address your payments. This must match the name on file with your bank</string>
    <string name="bank_name">The official name of your banking institution</string>
    <string name="txt_header_text_bid_creator">Sign up to Start creating bids</string>
    <string name="rad_btn_txt1">Individual</string>
    <string name="rad_btn_tx2">Comapny/Frim</string>
    <string name="txt_Company_desc">Additional Comapny Information required if participating as a company</string>
    <string name="txt_xheckbox_terms">I have read and agree to the terms and conditions</string>
    <string name="btn_txt">Proceed</string>
    <string name="txt_terms_and_condition">Terms and conditions</string>
    <string name="txt_new_user">If you are a new user to this app Please proceed to Sign Up</string>
    <string name="txt_neww_user">If you are a new user Please proceed to Sign Up</string>
    <string name="rad_login__txt_bidder">Bidder</string>
    <string name="rad_txt_login_bid_creator">Bid Creator</string>
    <string name="title_activity_app_home__nav_">App_home_Nav_Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Bid Creator</string>
    <string name="nav_header_subtitle">Name of bid Creator</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_pop_up">Do you wich to continuw as a Bidder or a Bid Creater</string>
</resources>
